test/libsolidity/syntaxTests/experimental/parsing_stdlib_import_without_pragma_2.sol
import { identity } from std.stub;
// ----
// ParserError 6845: (25-28): Expected import path.
